--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "@mui/material-nextjs": "^5.15.3",
+    "@tanstack/react-query": "^5.17.15",
+    "axios": "^1.6.5",
     "next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18"
