--- a/api/package.json
+++ b/api/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "caesar-salad": "^2.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "prettier": "3.2.2",
     "ts-node": "^10.9.2",
